@@ -2,10 +2,12 @@ package com.energytracker.security;
 
 import com.energytracker.model.User;
 import com.energytracker.repository.UserRepository;
+
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-
+import java.util.List;
 import java.util.Collections;
 
 @Service("myUserDetailsService")
@@ -28,10 +30,10 @@ public class MyUserDetailsService implements UserDetailsService {
             .orElseThrow(() -> new UsernameNotFoundException("User not found: " + email));
 
         return new org.springframework.security.core.userdetails.User(
-            user.getEmail(),
-            user.getPassword(),
-            Collections.emptyList() // No roles for now
-        );
+    user.getEmail(),
+    user.getPassword(),
+    List.of(new SimpleGrantedAuthority("ROLE_USER"))
+);
     }
 
     /**
